# einsum_ir

.github/workflows/: fedora.yml  macos.yml  ubuntu.yml
python/: CMakeLists.txt
python/src/: Model.cpp  Model.h  TensorOperation.cpp  TensorOperation.h  Types.h  bindings.cpp
python/src/etops/: __init__.py
samples/model/: matmul.py
samples/model/binary_set/: tccg_configs.py  tccg_run.py  test.py  utils.py
src/basic/binary/: ContractionBackend.h
src/model/: CMakeLists.txt
src/model/src/: bench_model.cpp  bench_tensor.cpp  bindings.cpp
src/model/src/a76/: bench_a76.cpp  model_a76.cpp  model_a76.h
src/model/src/common/: common.cpp  common.h  common.test.cpp  interpolation.cpp
src/model/src/generic/: model_generic.cpp  model_generic.h
src/model/src/m4/: bench_m4.cpp  bench_m4.h  model_m4.cpp  model_m4.h  model_m4.test.cpp
src/model/src/tensor/: backend.cpp  backend.h  config.h  frontend.cpp  frontend.h  tensor_config.cpp  tensor_config.h  tensor_constants.h  tensor_model.cpp  tensor_model.h  tensor_types.h
src/model/src/zen5/: bench_zen5.cpp  bench_zen5.h  model_zen5.cpp  model_zen5.h  model_zen5.test.cpp
src/model/tests/etops/: matmul.py
